# RPL-final

./: .gitmodules  Audio Visual Imagination Slides.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  STATUS.md
audio-visual-imagination/: ARCHITECTURE_TRANSFER_LEARNING.md  IMPLEMENTATION_STATUS.md  SELD_INTEGRATION_SUMMARY.md  SOUNDSPACES_SETUP.md  main.py  pyproject.toml  train.py
audio-visual-imagination/configs/: default_config.py
audio-visual-imagination/examples/: demo_model.py  test_seld_integration.py
audio-visual-imagination/src/audio_visual_imagination/models/: __init__.py  adapter.py  full_model.py  imagination_head.py  seld_encoder.py
audio-visual-imagination/src/audio_visual_imagination/training/: __init__.py  losses.py
src/audio_visual_imagination/: __init__.py
src/audio_visual_imagination/models/: __init__.py  full_model.py
